Added task edit title feature to taskDescription
