# server/app/static/swagger.json
@@ -955,6 +955,60 @@
         }
       }
     },
+    "/tasks/{id}/title": {
+      "patch": {
+        "description": "Update task's title",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "Task id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "header",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "description": {
+                    "type": "string",
+                    "description": "New title"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Tasks"
+        ],
+        "responses": {
+          "200": {
+            "description": "Task updated"
+          },
+          "400": {
+            "description": "Missing params || New title can't be the same as the old one."
+          },
+          "403": {
+            "description": "You can't perform this action"
+          }
+        }
+      }
+    },
     "/tasks/{id}/priority": {
       "patch": {
         "description": "Update task's priority",
